[gd_scene load_steps=20 format=3 uid="uid://cy4jhur3ippnv"]

[ext_resource type="Script" path="res://simulation.gd" id="1_2eo06"]
[ext_resource type="Texture2D" uid="uid://cuolvfxderri7" path="res://assets/background.png" id="1_y4wqu"]
[ext_resource type="Texture2D" uid="uid://dsqv8t8vc7040" path="res://assets/rock.png" id="3_bhldh"]
[ext_resource type="Texture2D" uid="uid://b4aijholtd1fc" path="res://assets/cloud0.png" id="4_5lola"]
[ext_resource type="Script" path="res://cloud.gd" id="4_gwu72"]
[ext_resource type="Texture2D" uid="uid://dy2nja0fo6yp6" path="res://assets/rock_ripples.png" id="4_h01mk"]
[ext_resource type="PackedScene" uid="uid://c7vwkk2vcvaai" path="res://settings_slider_option.tscn" id="6_81hte"]
[ext_resource type="Script" path="res://GUI.gd" id="6_ygy4c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3hcvp"]
atlas = ExtResource("4_h01mk")
region = Rect2(0, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ar2y"]
atlas = ExtResource("4_h01mk")
region = Rect2(500, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm83j"]
atlas = ExtResource("4_h01mk")
region = Rect2(1000, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_wffa8"]
atlas = ExtResource("4_h01mk")
region = Rect2(1500, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y0ek"]
atlas = ExtResource("4_h01mk")
region = Rect2(2000, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hmtx"]
atlas = ExtResource("4_h01mk")
region = Rect2(2500, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwicb"]
atlas = ExtResource("4_h01mk")
region = Rect2(3000, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0sjj"]
atlas = ExtResource("4_h01mk")
region = Rect2(3500, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeovn"]
atlas = ExtResource("4_h01mk")
region = Rect2(4000, 0, 500, 374)

[sub_resource type="AtlasTexture" id="AtlasTexture_u37o0"]
atlas = ExtResource("4_h01mk")
region = Rect2(4500, 0, 500, 374)

[sub_resource type="SpriteFrames" id="SpriteFrames_0meql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hcvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ar2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm83j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wffa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y0ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hmtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwicb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0sjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeovn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u37o0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Simulation" type="Node2D"]
script = ExtResource("1_2eo06")

[node name="Background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
offset_right = 3000.0
offset_bottom = 2226.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
texture = ExtResource("1_y4wqu")
metadata/_edit_use_anchors_ = true

[node name="Axis" type="Node2D" parent="."]
position = Vector2(1029, 509)
scale = Vector2(0.2, 0.245)

[node name="TextureRect" type="TextureRect" parent="Axis"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -240.5
offset_right = 337.0
offset_bottom = 240.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bhldh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Axis"]
scale = Vector2(1.56, 1.56)
sprite_frames = SubResource("SpriteFrames_0meql")
autoplay = "default"

[node name="Clouds" type="Node" parent="."]

[node name="Cloud" type="StaticBody2D" parent="Clouds"]
unique_name_in_owner = true
scale = Vector2(0.41302, 0.41302)
script = ExtResource("4_gwu72")

[node name="CloudBody" type="TextureRect" parent="Clouds/Cloud"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_5lola")
metadata/_edit_use_anchors_ = true

[node name="Ducks" type="Node" parent="."]
unique_name_in_owner = true

[node name="GUI" type="MarginContainer" parent="."]
z_index = 20
offset_right = 301.0
offset_bottom = 424.5
scale = Vector2(1.535, 1.535)
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("6_ygy4c")

[node name="TextureRect" type="ColorRect" parent="GUI"]
layout_mode = 2
color = Color(0.258824, 0.258824, 0.258824, 0.513726)

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Start" type="Button" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Pause" type="Button" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="Reset" type="Button" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="Apply" type="Button" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Apply"

[node name="ShowLabels" type="CheckButton" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "show labels"

[node name="NumberSlider" parent="GUI/MarginContainer/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/NumberSlider" index="0"]
text = "number of ducks"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/NumberSlider" index="1"]
min_value = 5.0
max_value = 25.0

[node name="TabContainer" type="TabContainer" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Collective" type="TabBar" parent="GUI/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Description" type="Label" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.678431, 0.678431, 0.678431, 1)
text = "Vary parameters for the whole
raft"

[node name="VelocitySlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/VelocitySlider" index="0"]
text = "target velocity"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/VelocitySlider" index="1"]
min_value = 10.0
max_value = 200.0
value = 100.0

[node name="MaxAccelerationSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/MaxAccelerationSlider" index="0"]
text = "max. acceleration"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/MaxAccelerationSlider" index="1"]
min_value = 5.0
value = 40.0

[node name="AccuracySlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/AccuracySlider" index="0"]
text = "accuracy"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/AccuracySlider" index="1"]
max_value = 1.0
step = 0.05
value = 0.9

[node name="ResponsivenessSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/ResponsivenessSlider" index="0"]
text = "responsiveness"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/ResponsivenessSlider" index="1"]
min_value = 1.0
max_value = 5.0
step = 0.1
value = 2.5

[node name="Single" type="TabBar" parent="GUI/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Description" type="Label" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.678944, 0.678944, 0.678944, 1)
text = "Override parameters for a single
'rouge' duck"

[node name="Active" type="CheckButton" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer"]
layout_mode = 2
text = "active"

[node name="VelocitySlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/VelocitySlider" index="0"]
text = "target velocity"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/VelocitySlider" index="1"]
min_value = 10.0
max_value = 200.0
value = 100.0

[node name="MaxAccelerationSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/MaxAccelerationSlider" index="0"]
text = "max. acceleration"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/MaxAccelerationSlider" index="1"]
min_value = 5.0
value = 40.0

[node name="AccuracySlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/AccuracySlider" index="0"]
text = "accuracy"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/AccuracySlider" index="1"]
max_value = 1.0
step = 0.05
value = 0.9

[node name="ResponsivenessSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer" instance=ExtResource("6_81hte")]
layout_mode = 2

[node name="Name" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/ResponsivenessSlider" index="0"]
text = "responsiveness"

[node name="HSlider" parent="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/ResponsivenessSlider" index="1"]
min_value = 1.0
max_value = 5.0
step = 0.1
value = 2.5

[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/HBoxContainer/Start" to="GUI" method="_on_start_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/HBoxContainer/Pause" to="GUI" method="_on_pause_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/HBoxContainer/Reset" to="GUI" method="_on_reset_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/HBoxContainer/Apply" to="GUI" method="_on_apply_pressed"]
[connection signal="toggled" from="GUI/MarginContainer/VBoxContainer/ShowLabels" to="GUI" method="_on_check_button_toggled"]

[editable path="GUI/MarginContainer/VBoxContainer/NumberSlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/VelocitySlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/MaxAccelerationSlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/AccuracySlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Collective/VBoxContainer/ResponsivenessSlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/VelocitySlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/MaxAccelerationSlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/AccuracySlider"]
[editable path="GUI/MarginContainer/VBoxContainer/TabContainer/Single/VBoxContainer/ResponsivenessSlider"]
